src/render/snapshots/dlin__render__dot__tests__group_by_node_type.snap
---
source: src/render/dot.rs
expression: output
---
digraph dbt_lineage {
  rankdir=LR;
  node [shape=box, style=filled, fontname="Helvetica"];

  subgraph cluster_model {
    label="Model";
    style=rounded;
    color="#4A90D9";

    "model.stg_orders" [label="stg_orders", fillcolor="#4A90D9", fontcolor="white"];
    "model.orders" [label="orders", fillcolor="#4A90D9", fontcolor="white"];
  }
  subgraph cluster_source {
    label="Source";
    style=rounded;
    color="#27AE60";

    "source.raw.orders" [label="src:raw.orders", fillcolor="#27AE60", fontcolor="white"];
  }
  subgraph cluster_test {
    label="Test";
    style=rounded;
    color="#1ABC9C";

    "test.orders_positive" [label="test:orders_positive", fillcolor="#1ABC9C", fontcolor="white"];
  }
  subgraph cluster_exposure {
    label="Exposure";
    style=rounded;
    color="#E74C3C";

    "exposure.dashboard" [label="exp:dashboard", fillcolor="#E74C3C", fontcolor="white"];
  }

  "source.raw.orders" -> "model.stg_orders" [label="source", style=dashed];
  "model.stg_orders" -> "model.orders" [label="ref"];
  "model.orders" -> "test.orders_positive" [label="test", style=dotted];
  "model.orders" -> "exposure.dashboard" [label="exposure", style=bold];
}
